--- a/profiles/templates/profiles/global-base-ui/global_base_ui.html
+++ b/profiles/templates/profiles/global-base-ui/global_base_ui.html
@@ -45,6 +45,10 @@
                         <img class="ui avatar image" src="{{user.image.url}}" alt="">
                         {{request.session.session_username}}
                     </a>
+                    <span></span>
+                </div>
+                <div class="item">
+                    <strong style="color:orangered;">{{request.session.session_user_position}}</strong>
                 </div>
                 <div class="ui right borderless inverted menu">
                     <div class="ui item" style='border-style: none;'>
