--- a/unitmanagement/templates/unitmanagement/k9_mia_list.html
+++ b/unitmanagement/templates/unitmanagement/k9_mia_list.html
@@ -3,10 +3,10 @@
 {% load widget_tweaks %}
 {% block content %}
 
-<div class="ui segment" style="padding:20px;">
-    <h1 class="ui header">Unconfirmed Arrival List
+<div class="ui inverted segment" style="padding:20px;">
+    <h3 class="ui inverted header">Unconfirmed Arrival List
     <div class="sub header">List of Units that did not arrive on duty. Select a unit to confirm status.</div>
-    </h1>
+    </h3>
 
      {% if messages %}
         {% for message in messages %}
