--- a/profiles/templates/profiles/vet_dashboard.html
+++ b/profiles/templates/profiles/vet_dashboard.html
@@ -21,7 +21,7 @@
                                             </div>
                                                 
                                             <div class="label">
-                                        <a href="{% url 'unitmanagement:vaccination_list'%">PREVENTIVE
+                                        <a href="{% url 'unitmanagement:vaccination_list'%}">PREVENTIVE
                                         HEALTH PROGRAM VACCINATION </a>
                                             </div>
                                         </div>               
@@ -49,22 +49,22 @@
                 </div>
                 <div class="sixteen wide column">
                         <div class="ui two column equal width grid">  
-                            <div class="ten wide column">
+                            <div class="seven wide column">
                                 <div class="ui raised center aligned segment">
                                         <div class="ui two column grid">
-                                            <div class="four wide column">
+                                            <div class="six wide column">
                                                     <div class="ui statistic">
                                                             <div class="value">
                                                                 <i class="syringe purple icon">{{yearly_count}}</i>
                                                             </div>
                                                             <div class="label">
-                                                                <strong>
+                                                              <br>
                                     <a href="{% url 'unitmanagement:yearly_vaccine_list'%}">YEARLY VACCINATIONS</a>
-                                                                </strong>
+                                                              
                                                             </div>
                                                         </div> 
                                             </div>
-                                            <div class="twelve wide column left aligned">
+                                            <div class="ten wide column left aligned">
                                                     <div class="ui grid">
                                                         {% for a,b in yearly_list%}
                                                         <div class="column">
@@ -77,24 +77,37 @@
                                         </div>
                                 </div>
                             </div> 
-                            <div class="six wide column">
+                            <div class="four wide column">
+                                <div class="ui raised center aligned segment">
+                                        <div class="ui statistic">
+                                                <div class="value">
+                                                    <i class="paw alternate olive icon">{{ab_k9}}</i>
+                                                </div>
+                                                <div class="label">
+                                                    <br>
+                                                        <a href="{% url 'planningandacquiring:add_procured_k9'%}">K9 ACQUISITION COUNTDOWN</a>
+                                                  
+                                                </div>
+                                            </div>
+                                </div>
+                            </div> 
+                            <div class="five wide column">
                                 <div class="ui raised center aligned segment">
                                     <div style="margin-left: 25%;">
                                             <span style="color: #016936;">Today </span> |
                                             <span style="color: #0E6EB8;">Upcoming</span>
                                     </div>
                                         
-                                    <div class="card">
-                                                <div class="content">
-                                                    <i class="huge red heartbeat icon"></i>
-                                                    <i class="huge green icon">{{checkup_now}}</i>
-                                                    <i class="huge blue icon">{{checkup_upcoming}}</i>
+                                    <div class="ui statistic">
+                                                <div class="value">
+                                                    <i class="red heartbeat icon"></i>
+                                                    <i class="green icon">{{checkup_now}}</i>
+                                                    <i class="blue icon">{{checkup_upcoming}}</i>
                                                 </div>
-                                                <div class="extra content right aligned">
+                                                <div class="label">
                                                   
-                                                    <strong>
-                                                        <a href="#">K9 PHYSICAL EXAM</a>
-                                                    </strong>
+                                        <a href="{% url 'unitmanagement:k9_checkup_list_today'%}">K9 PHYSICAL EXAM</a>
+                                                  
                                                 </div>
                                             </div>
                                 </div>
@@ -110,9 +123,9 @@
                                                 <i class="certificate violet icon">{{classify_count}}</i>
                                             </div>
                                             <div class="label">
-                                                <strong>
+                                            
                                                     <a href="{% url 'unitmanagement:trained_list'%}">CLASSIFY K9's</a>
-                                                </strong>
+                                            
                                             </div>
                                         </div>
                                     </div>
@@ -124,9 +137,9 @@
                                         <i class="first aid green icon">{{health_pending}}</i>
                                     </div>
                                     <div class="label">
-                                        <strong>
+                                        
                                             <a href="{% url 'unitmanagement:k9_sick_list'%}">HEALTH CONCERNS</a>
-                                        </strong>
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -138,9 +151,9 @@
                                         <i class="exclamation venus mars teal icon">{{mated_count}}</i>
                                     </div>
                                     <div class="label">
-                                        <strong>
+                                      
                                             <a href="{% url 'planningandacquiring:breeding_list'%}?type=mated">MATED K9's</a>
-                                        </strong>
+                                      
                                     </div>
                                 </div>
                             </div>
@@ -153,9 +166,9 @@
                                         <i class="heart red icon">{{pregnant_count}}</i>
                                     </div>
                                     <div class="label">
-                                        <strong>
+                                       
                                             <a href="{% url 'planningandacquiring:breeding_list'%}?type=pregnant">PREGNANT K9's</a>
-                                        </strong>
+                                       
                                     </div>
                                 </div>
                             </div>
@@ -168,12 +181,12 @@
                                 <div class="ui raised center aligned segment">
                                     <div class="ui statistic">
                                         <div class="value">
-                                            <i class="paw alternate olive icon">{{ab_k9}}</i>
+                                            <i class="band aid yellow icon">{{unfit_count}}</i>
                                         </div>
                                         <div class="label">
-                                            <strong>
-                                                <a href="{% url 'planningandacquiring:add_procured_k9'%}">K9 ACQUISITION COUNTDOWN</a>
-                                            </strong>
+                                            
+                                                <a href="{% url 'unitmanagement:unfit_list'%}">UNFIT K9's</a>
+                                            
                                         </div>
                                     </div>
                                 </div>
@@ -185,9 +198,9 @@
                                         <i class="exclamation black icon">{{incident}}</i>
                                     </div>
                                     <div class="label">
-                                        <strong>
+                                    
                                             <a href="{% url 'unitmanagement:k9_incident'%}">K9 INCIDENTS</a>
-                                        </strong>
+                                      
                                     </div>
                                 </div>
                             </div>
@@ -195,14 +208,14 @@
                 
                         <div class="column">
                             <div class="ui raised center aligned segment">
-                                <div class="card">
-                                    <div class="content">
-                                        <i class="huge handshake brown icon">{{for_adopt_count}}</i>
+                                <div class="ui statistic">
+                                    <div class="value">
+                                        <i class="handshake brown icon">{{for_adopt_count}}</i>
                                     </div>
-                                    <div class="extra content">
-                                        <strong>
+                                    <div class="label">
+                                        
                                             <a href="{% url 'training:adoption_list'%}">K9 FOR-ADOPTION</a>
-                                        </strong>
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -213,10 +226,9 @@
                                         <div class="value">
                                             <i class="calendar alternate orange icon">{{health_pending}}</i>
                                         </div>
-                                        <div class="extra content">
-                                            <strong>
-                                                <a href="{% url 'unitmanagement:k9_sick_list'%}">PHEX TO BE SCHEDULED</a>
-                                            </strong>
+                                        <div class="label">
+                                        <a href="{% url
+                                        'unitmanagement:k9_checkup_pending'%}">PHEX TO BE SCHEDULED</a>
                                         </div>
                                     </div>
                                 </div>
@@ -236,7 +248,7 @@
                 <div class="ui basic segment"> 
                 <div class="ui info message">
                     <div class="header">
-                        Dont forget to keep the K9 Reproductive Date updated!
+                        Dont forget to keep the K9's Reproductive Cycle updated!
                         <a href="{% url 'unitmanagement:reproductive_list'%}">Go</a>
                     </div>
                 </div>
