--- a/planningandacquiring/templates/planningandacquiring/add_K9_parents.html
+++ b/planningandacquiring/templates/planningandacquiring/add_K9_parents.html
@@ -159,7 +159,7 @@
                                  <th>Birth Success</th>
                                  <th>Litter</th>
                                  <th>Sick Record</th>
-                                 <th>In-Heat Date</th>
+                                 <th>Mating Date</th>
                              </tr>
                          </thead>
                  
