--- a/planningandacquiring/templates/planningandacquiring/K9_list.html
+++ b/planningandacquiring/templates/planningandacquiring/K9_list.html
@@ -33,7 +33,7 @@
                     <td>{{ K9.capability}}</td>
                     <td>{{ K9.source}}</td>
                     <td>{{ K9.status}}</td>
-                    <td>{{ K9.date_created}}</td>
+                    <td>{{ K9.date_created|date:'Y-m-d, h:i a'}}</td>
                 </tr>
             {% endfor %}
         </tbody>
